--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;600;700&display=swap');
     </style>
 
     <!--
